--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -64,3 +64,126 @@ h1, h2, h3, h4, h5 {
 }
 
 /* Your code starts here! */
+/*Global*/
+
+.container {
+	width: 1000px;
+	margin: 0 auto;
+  }
+  
+  header nav {
+	display: inline-block;
+	width: 690px;
+	vertical-align: top;
+	margin-top: 35px;
+  }
+  
+  header nav a {
+	margin-right: 65px;
+	font-size: 14px;
+	color: gray;
+	text-decoration: none;
+  }
+  
+  header nav a:hover {
+	text-decoration: underline;
+  }
+  
+  header nav a:first-child {
+	margin-left: 0;
+  }
+  
+  header nav a:last-child {
+	margin-right: 0;
+  }
+  
+  header .logo {
+	margin-top: 25px;
+	display: inline-block;
+  }
+  
+  .content .content-text {
+	display: inline-block;
+	vertical-align: top;
+	font-size: 77px;
+	margin-top: 120px;
+	text-align: center;
+	padding: 0px 75px 0px 75px;
+	width: 475px;
+  }
+  
+  .content .content-text button {
+	background: white;
+	vertical-align: top;
+	margin-top: 6px;
+	padding: 8px 44px;
+	font-size: 17px;
+	border: 1px solid black;
+	cursor: pointer;
+  }
+  
+  .content .content-text button:hover {
+	background: black;
+	color: white;
+  }
+  
+  .content img {
+	display: inline-block;
+	margin-top: 69px;
+  }
+  
+  .main-content {
+	border-top: 1px solid black;
+	margin-top: 76px;
+	padding-top: 39px;
+  }
+  
+  .main-content {
+	padding: 0 10px;
+  }
+  
+  .main-content .text-content {
+	width: 410px;
+	display: inline-block;
+	margin-right: 34px;
+  }
+  
+  .main-content .top-section .text-content:last-child {
+	margin-right: 0;
+  }
+  
+  .main-content .middle-img {
+	margin-top: 45px;
+  }
+  
+  .main-content .bottom-section {
+	margin-top: 37px;
+	padding: 0 10px;
+  }
+  
+  .main-content .bottom-section .text-content {
+	width: 275px;
+	display: inline-block;
+	margin-right: 12px;
+  }
+  
+  .main-content .bottom-section .text-content:last-child {
+	margin-right: 0;
+  }
+  
+  .footer-content {
+	margin-top: 57px;
+	border-top: 1px solid black;
+	padding: 39px 10px 0;
+  }
+  
+  footer p {
+	margin-top: 20px 0;
+	text-align: center;
+  }
+  
+  footer h3 {
+	margin: 32px 0;
+	text-align: left;
+	font-size: 14px;
+  }
